<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.HelpActivity"
    tools:showIn="@layout/activity_help"
    android:background="@drawable/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:gravity="center"
                android:textSize="30sp"
                android:padding="@dimen/margin_larg"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text1"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text2"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text3"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text4"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text5"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/h1"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text6"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/h2"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text7"
                android:gravity="center|right"
                android:textSize="@dimen/text_size_big"
                android:padding="@dimen/margin_normal"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/h3"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="@dimen/margin_larg"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text1"
        android:gravity="center|right"
        android:textSize="@dimen/text_size_big"
        android:padding="@dimen/margin_normal"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text2"
        android:gravity="center|right"
        android:textSize="@dimen/text_size_big"
        android:padding="@dimen/margin_normal"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text3"
        android:gravity="center|right"
        android:textSize="@dimen/text_size_big"
        android:padding="@dimen/margin_normal"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:textColor="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text4"
        android:gravity="center|right"
        android:textSize="@dimen/text_size_big"
        android:padding="@dimen/margin_normal"
        />

</LinearLayout>